Git ignore update

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -9,6 +9,11 @@
   </head>
 
   <body>
-    <%= yield %>
+    <%= erb :nav %>
+    <div class="container">
+      <div class="row mt-5">
+        <%= yield %>
+      </div>
+    </div>
   </body>
 </html>
