--- a/views/index.erb
+++ b/views/index.erb
@@ -1,3 +1,10 @@
 
-<h1>Bienvenido</h1>
-
+<div class="jumbotron">
+  <h1 class="display-3">Bienvenido!</h1>
+  <p class="lead">Soy José Gamboa, soy un desarrollador web mexicano especializado en ruby on rails, me gustan los videojuegos y adoro la comida rápida.</p>
+  <hr class="my-4">
+  <p>Te invito a navegar sobre este sitio.</p>
+  <p class="lead">
+    <a class="btn btn-primary btn-lg" href="/about" role="button">Conocer más</a>
+  </p>
+</div>
