--- a/views/about.erb
+++ b/views/about.erb
@@ -1,20 +1,51 @@
 
-<h1>About site</h1>
+<h1>Sobre mi</h1>
 
-<div class="row mt-3">
-  <ul class="nav nav-tabs">
+<div class="mt-5">
+  <ul class="nav nav-tabs mb-5">
     <li class="nav-item">
-      <a class="nav-link active" data-toggle="tab" href="#home">Home</a>
+      <a class="nav-link active" data-toggle="tab" href="#last_jobs">Trabajos anteriores</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" data-toggle="tab" href="#profile">Profile</a>
+      <a class="nav-link" data-toggle="tab" href="#academic">Academico</a>
     </li>
   </ul>
-  <div id="myTabContent" class="tab-content">
-    <div class="tab-pane fade show active" id="home">
+
+  <div id="myTabContent" class="row tab-content">
+    <div class="col tab-pane fade show active" id="last_jobs">
+        
+      <h4>Experiencia laboral</h4>
+      <ul>
+        <li>
+          SINC
+        </li>
+        <li>
+          UKKO
+        </li>
+        <li>
+          Kinedu
+        </li>
+        <li>
+          Cursodia
+        </li>
+      </ul>
+
       <p>Raw denim you probably haven't heard of them jean shorts Austin. Nesciunt tofu stumptown aliqua, retro synth master cleanse. Mustache cliche tempor, williamsburg carles vegan helvetica. Reprehenderit butcher retro keffiyeh dreamcatcher synth. Cosby sweater eu banh mi, qui irure terry richardson ex squid. Aliquip placeat salvia cillum iphone. Seitan aliquip quis cardigan american apparel, butcher voluptate nisi qui.</p>
+
+
     </div>
-    <div class="tab-pane fade" id="profile">
+    <div class="col tab-pane fade" id="academic">
+
+      <h4>Escuelas</h4>
+      <ul>
+        <li>
+          FIME
+        </li>
+        <li>
+          PREPA 2
+        </li>
+      </ul>
+
       <p>Food truck fixie locavore, accusamus mcsweeney's marfa nulla single-origin coffee squid. Exercitation +1 labore velit, blog sartorial PBR leggings next level wes anderson artisan four loko farm-to-table craft beer twee. Qui photo booth letterpress, commodo enim craft beer mlkshk aliquip jean shorts ullamco ad vinyl cillum PBR. Homo nostrud organic, assumenda labore aesthetic magna delectus mollit.</p>
     </div>
   </div>
